--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,46 @@
 body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-color: black;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+* {
+  box-sizing: border-box;
+}
+
+.outer {
+  text-align: center;
+}
+
+.form {
+  width: 400px;
+  margin: 15px auto;
+}
+
+.url_input {
+  width: 100%;
+}
+
+.inputtitle {
+  width: 80%;
+}
+
+.button {
+  width: 20%;
+}
+
+.picture {
+  width: 400px;
+  margin: 15px auto;
+  background-color: white;
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.picTitle {
+  padding-top: 10px;
+  padding-bottom: 5px;
+}
+
+.image {
+  width: 380px;
+  margin: 10px auto;
 }
